# rag-document-qa

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/src/rag_backend/: config.py  main.py
backend/src/rag_backend/models/: schemas.py
backend/src/rag_backend/routes/: chat.py  upload.py
backend/src/rag_backend/services/: chunker.py  document_parser.py  embeddings.py  llm.py  vector_store.py
frontend/: index.html  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ChatWindow.tsx  FileUpload.tsx  MessageBubble.tsx  SourceCitation.tsx  StreamingText.tsx
frontend/src/hooks/: useChat.ts
